--- a/NfOTX/nfotx.cfg
+++ b/NfOTX/nfotx.cfg
@@ -1,8 +1,14 @@
-;; configuration
+# Alienvault plugin
+# Author: js@av
+# Plugin nfotx id:90011 version: 0.0.4
+# Accepted products:
+# alienvault - nfotx 0.0.4
+# Description:
+# Matches netflow to OTX
 
-;;# more /etc/rsyslog.d/nfotx.conf 
-;;if $programname == 'nfotx' then /var/log/nfotx.log
-;;& ~
+# more /etc/rsyslog.d/nfotx.conf 
+#if $programname == 'nfotx' then /var/log/nfotx.log
+#& ~
 
 
 
