--- a/Agent-Pulse/agent_pulse.cfg
+++ b/Agent-Pulse/agent_pulse.cfg
@@ -38,6 +38,16 @@ event_type=event
 regexp="SHA256:\s+(?P<sha256>\w{64})"
 plugin_sid={:pulsematch($sha256)}
 
+[SHA1]
+event_type=event
+regexp="SHA-1:\s+(?P<sha1>\w{40})"
+plugin_sid={:pulsematch($sha1)}
+
+[MD5]
+event_type=event
+regexp="MD5:\s+(?P<md5>\w{32})"
+plugin_sid={:pulsematch($md5)}
+
 [IP]
 event_type=event
 regexp="IP:\s+(?P<ip>\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})"
