--- a/Agent-Pulse/agent_pulse.cfg
+++ b/Agent-Pulse/agent_pulse.cfg
@@ -37,25 +37,29 @@ shutdown=
 event_type=event
 regexp="SHA256:\s+(?P<sha256>\w{64})"
 plugin_sid={:pulsematch($sha256)}
+userdata1={:pulseidextract($sha256)}
 
 [SHA1]
 event_type=event
 regexp="SHA-1:\s+(?P<sha1>\w{40})"
 plugin_sid={:pulsematch($sha1)}
+userdata1={:pulseidextract($sha1)}
 
 [MD5]
 event_type=event
 regexp="MD5:\s+(?P<md5>\w{32})"
 plugin_sid={:pulsematch($md5)}
+userdata1={:pulseidextract($md5)}
 
 [IP]
 event_type=event
 regexp="IP:\s+(?P<ip>\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})"
 plugin_sid={:pulsematch($ip)}
+userdata1={:pulseidextract($ip)}
 
 [Domain]
 event_type=event
 regexp="Domain:\s+(?P<domain>[^\s]+)"
 plugin_sid={:pulsematch($domain)}
-
+userdata1={:pulseidextract($domain)}
 
